[package]
name = "steal-token-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
#winapi = { version = "0.3.9", features = ["processthreadsapi"] }
windows = {  version = "0.57.0", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authentication",
    "Win32_Security_Authentication_Identity",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices"
] }

